--- a/portfolio/cgt321.html
+++ b/portfolio/cgt321.html
@@ -34,7 +34,7 @@
 		Pfarrkirche Maria am Berg in Hallstatt, Austria >>>
 	</a>
 	<p>
-		Loosely based off of a photo I took. Exercise in illustrating amorphous things like trees and mist.
+		Loosely based off of a photo I took.
 	</p>
 	
 	<br>
@@ -46,7 +46,7 @@
 		St. Leo Oratory >>>
 	</a>
 	<p>
-		Recalled moment while attending mass. A window above Mary cast light through incense and onto a little girl wearing a veil. Greyscale as a value exercise.
+		Recalled moment while attending mass. A window above Mary cast light through incense and onto a little girl wearing a veil.
 	</p>
 	
 	<br>
@@ -57,10 +57,8 @@
 	<a href="https://www.youtube.com/watch?v=mclbVTIYG8E" target="_blank">
 		Boston Dynamics' PETMAN >>>
 	</a>
-	<p>
-		Exercise in implying complexity.
-	</p> 
 	
+	<br>
 	<br>
 	
 	<a href="cgt321/run.png" target="_blank">
