--- a/resources/nav.html
+++ b/resources/nav.html
@@ -11,6 +11,7 @@
 	<ul>
 		<li><a href="/index.html">home</a></li>
 		<li><a href="/about.html">about</a></li>
+		<li><a href="/more.html">misc</a></li>
 	</ul>
 
 	<ul style="font-size:18px; padding-top:20px;">
