mobile support WIP

--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="/resources/style.css">
     <script src="https://viewer.marmoset.co/main/marmoset.js"></script>
 </head>
-<body style="margin:0; padding:0;">
+<body style="margin:0; padding:0; overflow:hidden;">
     <script>
 	
 		// marmoset.largeUI = true;
