--- a/resources/nav.html
+++ b/resources/nav.html
@@ -1,29 +1,37 @@
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+	    <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="/resources/style.css">
+	</head>
 
-<div id="nav-content">
+	<body style="padding:0; margin:0; overflow-x: hidden;">
+		<nav>
 
-	<a href="/index.html" style="display: block; width:150px;">
-		<img src="/resources/dog.svg" style="width: auto; height: auto; margin: 10px;" alt="home">
-	</a>
+			<a href="/index.html" target="_top" style="display: block; width:150px;">
+				<img src="/resources/dog.svg" style="width: auto; height: auto; margin: 10px;" alt="home">
+			</a>
 
-	<ul>
-		<li><a href="/index.html">home</a></li>
-		<li><a href="/about.html">about</a></li>
-		<li><a href="/more.html">misc</a></li>
-	</ul>
+			<ul>
+				<li><a href="/index.html" target="_top">home</a></li>
+				<li><a href="/about.html" target="_top">about</a></li>
+				<li><a href="/more.html" target="_top">misc</a></li>
+			</ul>
 
-	<ul style="font-size:18px; padding-top:20px;">
-		<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
-			bsky</a>
-		<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
-			twitter</a>
-		<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
-			github</a>
-		<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
-			sketchfab</a>
+			<ul style="font-size:18px; padding-top:20px;">
+				<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
+					bsky</a>
+				<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
+					twitter</a>
+				<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
+					github</a>
+				<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
+					sketchfab</a>
 
-		<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m
-	</ul>
-</div>
+				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m
+			</ul>
+			
+		</nav>
+	</body>
+</html>
