--- a/more.html
+++ b/more.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
 
-    <meta charset="UTF-8">
-    <title>Julian Triveri Portfolio</title>
-    <link rel="stylesheet" href="/resources/style.css">
-
-    <script src="/resources/nav.js" type="text/javascript"></script>
+	<meta charset="UTF-8">
+	<title>Julian Triveri Portfolio</title>
+	<link rel="stylesheet" href="/resources/style.css">
 
 </head>
 <body>
 
-<nav id="nav"></nav>
+<div id="navmobile">
+	<a href="/resources/nav.html"> Menu </a>
+</div>
+<iframe id="navframe" src="/resources/nav.html"></iframe>
 
 <article>
 
