--- a/template.html
+++ b/template.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<title>Julian Triveri Portfolio</title>
 	<link rel="stylesheet" href="/resources/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<script src="/resources/nav.js" type="text/javascript"></script>
 
 </head>
 <body>
 
-<nav id="nav"></nav>
+<div id="navmobile">
+	<a href="/resources/nav.html"> Menu </a>
+</div>
+<iframe id="navframe" src="/resources/nav.html"></iframe>
 
 <article>
 
