--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Julian Triveri Portfolio</title>
 	<link rel="stylesheet" href="/resources/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 </head>
 <body>
