--- a/resources/nav.html
+++ b/resources/nav.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/resources/style.css">
 	</head>
 
-	<body style="padding:0; margin:0; overflow-x: hidden;">
+	<body style="padding:0; margin:50px 0 50px 0; overflow-x: hidden;">
 		<nav>
 
 			<a href="/index.html" target="_top" style="display: block; width:150px;">
