update misc page

--- a/more.html
+++ b/more.html
@@ -19,17 +19,19 @@
 
 	<h1 style="margin-bottom: 0;">misc.</h1>
 	
-	<a href="/portfolio/cgt321.html">
-		Illustrations for a class >>>
-	</a>
-	<br>
-	<a href="blender.html">
-		Blender resources for a student workshop >>>
-	</a>
-	<br>
-	<a href="archive/index.html">
-		Old website & projects from 2020 and before >>>
-	</a>
+	<ul>
+		<li><a href="/portfolio/cgt321.html">
+			Illustrations for a class >>>
+		</a>
+		<br>
+		<li><a href="blender.html">
+			Blender resources for a student workshop >>>
+		</a>
+		<br>
+		<li><a href="archive/index.html">
+			Old website & projects from 2020 and before >>>
+		</a>
+	</ul>
 
 </article>
 
