--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
 
 	<h1 style="margin-bottom: 0;">Julian Triveri</h1>
 	
-    <div class="grid" style="padding-top: 75px;">
+    <div class="circlesPacked" style="padding-top: 75px;">
 
-        <a href="/portfolio/virutallab.html">
+        <a class="packedCircle" href="/portfolio/virutallab.html">
             <video autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
         </a>
 		
-		<a href="/portfolio/mocap.html">
+		<a class="packedCircle" href="/portfolio/mocap.html">
 			<video autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
 		</a>
 		
-		<a href="/portfolio/courthouse.html">
+		<a class="packedCircle" href="/portfolio/courthouse.html">
 			<video autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
         </a>
 		
-		<a href="/portfolio/surveymeter.html">
+		<a class="packedCircle" href="/portfolio/surveymeter.html">
             <video autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
         </a>
 		
-		<a href="/portfolio/lasso.html">
+		<a class="packedCircle" href="/portfolio/lasso.html">
 			<video autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
         </a>
 
-        <a href="/portfolio/snowman.html">
+        <a class="packedCircle" ref="/portfolio/snowman.html">
             <video autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
         </a>
 		
-		<a href="/portfolio/dioramas.html">
+		<a class="packedCircle" href="/portfolio/dioramas.html">
             <video autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
         </a>
         
