--- a/mobilenav.html
+++ b/mobilenav.html
@@ -5,25 +5,14 @@
 	<meta charset="UTF-8">
 	<title>Julian Triveri Portfolio</title>
 	<link rel="stylesheet" href="/resources/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 </head>
 <body>
 
 <div id="backgroundGlyph"></div>
 
-<div id="navmobile">
-	<a href="/mobilenav.html"> Menu </a>
-</div>
-<iframe id="navframe" src="/resources/nav.html"></iframe>
-
-<article>
-
-	<h1>Template</h1>
-
-	<h2>Change this!</h2>
-	<p>Blah blah blah</p>
-
-</article>
+<iframe style="position:absolute; top:0; left:0; width:100%; height:100%; margin:0; padding:0;" src="/resources/nav.html"></iframe>
 
 </body>
 </html>
