--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 
+<div id="backgroundGlyph"></div>
+
 <div id="navmobile">
-	<a href="/resources/nav.html"> Menu </a>
+	<a href="/mobilenav.html"> Menu </a>
 </div>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
