thumbnail hover titles

--- a/about.html
+++ b/about.html
@@ -10,8 +10,6 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
-
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
 </div>
@@ -41,6 +39,10 @@
 		where problem solving and clever tricks make all the difference. 
     </p>
 	<p>
+		This site was built using Notepad++ and some Googling.
+	</p>
+	
+	<!-- <p> 
 		If I can be candid and a little unprofessional for a moment, 
 		I want to admit that I often ask myself whether my work matters that much.
 		The world is full of many important problems, 
@@ -50,10 +52,10 @@
 		please do not hesitate to contact me.
 		I would love to work with you and 
 		sink my time and effort into things that truly matter.
-	</p>
-	<p>
+	</p> -->
+	<!-- <p>
 		God bless
-	</p>
+	</p> -->
 
 </article>
 
