--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
+
 
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
@@ -24,11 +24,12 @@
 		Custom motion graphics projected onto a courthouse facade.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
 	</h3>
-
-	<iframe class="webvid"
-			src="https://www.youtube.com/embed/vAEIovOlc44"
+	
+	<div class="webvid">
+		<iframe src="https://www.youtube.com/embed/vAEIovOlc44"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 			allowfullscreen></iframe>
+	</div>
 			
 	<p>
 		Thanks to 
