--- a/portfolio/dioramas.html
+++ b/portfolio/dioramas.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
+
 
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
@@ -27,26 +27,29 @@
 		<img class="software-icon" src="/resources/icons/substance.png">
 	</h3>
 
-	<iframe class="webvid"
-		allowfullscreen
-		allow="autoplay; fullscreen; xr-spatial-tracking" 
-		xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
-		src="https://sketchfab.com/models/180703cf088f45528cd8363554e7b7f5/embed?preload=1"> 
-	</iframe>
+	<div class="webvid">
+		<iframe allowfullscreen
+			allow="autoplay; fullscreen; xr-spatial-tracking" 
+			xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
+			src="https://sketchfab.com/models/180703cf088f45528cd8363554e7b7f5/embed?preload=1"> 
+		</iframe>
+	</div>
 	
-	<iframe class="webvid"
-		allowfullscreen
-		allow="autoplay; fullscreen; xr-spatial-tracking" 
-		xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
-		src="https://sketchfab.com/models/be719186e19b4ea7adf5fd58a3d55191/embed?preload=1">
-	</iframe>
+	<div class="webvid">
+		<iframe allowfullscreen
+			allow="autoplay; fullscreen; xr-spatial-tracking" 
+			xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
+			src="https://sketchfab.com/models/be719186e19b4ea7adf5fd58a3d55191/embed?preload=1">
+		</iframe>
+	</div>
 	
-	<iframe class="webvid"
-		allowfullscreen
-		allow="autoplay; fullscreen; xr-spatial-tracking" 
-		xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
-		src="https://sketchfab.com/models/8c6de08c5dd8447f8647d73d3bd4a908/embed?preload=1"> 
-	</iframe>
+	<div class="webvid">
+		<iframe allowfullscreen
+			allow="autoplay; fullscreen; xr-spatial-tracking" 
+			xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
+			src="https://sketchfab.com/models/8c6de08c5dd8447f8647d73d3bd4a908/embed?preload=1"> 
+		</iframe>
+	</div>
 
 </article>
 
