--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
+
 
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
@@ -29,9 +29,12 @@
 		<img class="software-icon" src="/resources/icons/polyhaven.png">
 	</h3>
 	
-	<iframe class="webvid"
-		src="https://player.vimeo.com/video/914606490?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
-		allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+	
+	<div class="webvid verticalvid">
+		<iframe src="https://player.vimeo.com/video/914606490?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+		allow="autoplay; fullscreen; picture-in-picture" 
+		style = "height:100%;"allowfullscreen></iframe>
+	</div>
 	
 	<p>
 		Made together with 
