--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
+
 
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
@@ -31,11 +31,11 @@
 		<img class="software-icon" src="/resources/icons/ambientcg.png">
 	</h3>
 	
-	<iframe class="webvid"
-			src="https://www.youtube.com/embed/IgpgE4URJyo"
+	<div class="webvid">
+		<iframe src="https://www.youtube.com/embed/IgpgE4URJyo"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 			allowfullscreen></iframe>
-			
+	</div>
 	<p>
 		This is a prototype VR multiplayer sword dueling game.
 		Two players are intended to face off with physical foam swords on a motion capture stage.
