--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
+
 
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
@@ -30,10 +30,11 @@
 		<img class="software-icon" src="/resources/icons/meta.png">
 	</h3>
 	
-	<iframe class="webvid"
-			src="https://www.youtube.com/embed/Jx7QUGfDt30"
-			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-			allowfullscreen></iframe>
+	<div class="webvid verticalvid">
+		<iframe src="https://www.youtube.com/embed/Jx7QUGfDt30"
+				allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+				allowfullscreen></iframe>
+	</div>
 	
 	<p>
 		This page is a work in progress!
