--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
+
 
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
@@ -30,9 +30,10 @@
 	
 	</h3>
 	
-	<iframe class="webvid"
-			src="https://player.vimeo.com/video/891968434?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+	<div class="webvid">
+	<iframe src="https://player.vimeo.com/video/891968434?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+	</div>
 			
 	<script src="https://player.vimeo.com/api/player.js"></script>
 	
@@ -43,7 +44,9 @@
 		Built on Unity, I'm responsible for nearly all visuals and scripting.
 	</p>
 	
-	<iframe class="webvid" src="virtuallab/tbexport.html"></iframe>
+	<div class="webvid verticalvid">
+		<iframe src="virtuallab/tbexport.html"></iframe>
+	</div>
 	
 	<p>
 		A lot of care went into the visuals and user interaction to teach
