--- a/index.html
+++ b/index.html
@@ -24,31 +24,59 @@
     <div class="circlesPacked" style="padding-top: 75px;">
 
         <a class="packedCircle" href="/portfolio/virutallab.html">
-            <video autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				nuclear engineering virtual education
+			</div>
         </a>
 		
 		<a class="packedCircle" href="/portfolio/mocap.html">
-			<video autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				VR + motion capture prototype
+			</div>
 		</a>
 		
 		<a class="packedCircle" href="/portfolio/courthouse.html">
-			<video autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				projected motion grpahics
+			</div>
         </a>
 		
 		<a class="packedCircle" href="/portfolio/surveymeter.html">
-            <video autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
+            <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				AR nuclear pharmacy education
+			</div>
         </a>
 		
 		<a class="packedCircle" href="/portfolio/lasso.html">
-			<video autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				VR lasso<br>gamejam game
+			</div>
         </a>
 
-        <a class="packedCircle" ref="/portfolio/snowman.html">
-            <video autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
+        <a class="packedCircle" href="/portfolio/snowman.html">
+            <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				WIP animations
+			</div>
         </a>
 		
 		<a class="packedCircle" href="/portfolio/dioramas.html">
-            <video autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
+            <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				texture & light baking tests
+			</div>
         </a>
         
     </div>
