--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="backgroundGlyph"></div>
+
 
 <div id="navmobile">
 	<a href="/mobilenav.html"> Menu </a>
@@ -28,16 +28,20 @@
 		<img class="software-icon" src="/resources/icons/houdini.png">
 	</h3>
 
-	<iframe class="webvid"
-		src="https://player.vimeo.com/video/822188345?h=66eadcb174&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
-		allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-	
+	<div class="webvid">
+		<iframe class="webvid"
+			src="https://player.vimeo.com/video/822188345?h=66eadcb174&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
 	<br>
 	
-	<iframe class="webvid"
-			src="https://www.youtube.com/embed/Aae3vmD3QM0"
-			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-			allowfullscreen></iframe>
+	<div class="webvid">
+		<iframe class="webvid"
+				src="https://www.youtube.com/embed/Aae3vmD3QM0"
+				allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+				allowfullscreen></iframe>
+	</div>
 
 	<script src="https://player.vimeo.com/api/player.js"></script>
 
