--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -29,7 +29,7 @@
 	</h3>
 
 	<div class="webvid">
-		<iframe class="webvid"
+		<iframe 
 			src="https://player.vimeo.com/video/822188345?h=66eadcb174&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
@@ -37,8 +37,7 @@
 	<br>
 	
 	<div class="webvid">
-		<iframe class="webvid"
-				src="https://www.youtube.com/embed/Aae3vmD3QM0"
+		<iframe src="https://www.youtube.com/embed/Aae3vmD3QM0"
 				allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 				allowfullscreen></iframe>
 	</div>
