cutting out the fat

--- a/about.html
+++ b/about.html
@@ -28,21 +28,18 @@
 	</p>
 	
 	<p>
-		I have experience in realtime 3D art, basic animation, and high-level programming, and I'm currently
-		expanding my skillset to include graphics and low-level programming.
+		I have experience in real-time 3D art, basic animation, and high-level programming, and I'm currently
+		expanding my skill-set to include graphics and low-level programming.
     </p>
 	
     <p>
 		While I believe that form should always follow function,
 		I still have a keen interest in design and aesthetics.
 		I especially love creating refined visuals for 
-		performace-constrained platforms such as web and mobile VR. 
+		performance-constrained platforms such as web and mobile VR. 
 		Working within such constraints requires a more human touch
 		where problem solving and clever tricks make all the difference. 
     </p>
-	<p>
-		This site was built using Notepad++ and some Googling.
-	</p>
 	
 	<!-- <p> 
 		If I can be candid and a little unprofessional for a moment, 
