--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -37,10 +37,10 @@
 		I had the opportunity to create two projection-mapped motion graphics for a local food & music festival.
 		I created these using Blender's parametric geometry and rendering tools together with a  
 		<a href="https://www.artstation.com/artwork/DAP9D9" target="_blank">
-		peer's bespoke base model of the courthouse</a>.
-		These animations played together with dozens of others on the façade of the
-		<a href="https://www.homeofpurdue.com/things-to-do/museums-history-and-architecture/tippecanoe-county-courthouse/" target="_blank">
-		Tippecanoe County Courthouse</a> in Lafayette, IN.
+			peer's bespoke base model of the courthouse
+		</a>.
+		These animations played together with dozens of others on the facade of the
+		Tippecanoe County Courthouse in Lafayette, IN.
 	</p>
 	
 	<p>
