--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -49,18 +49,16 @@
 	<p>
 		I created the lasso with 
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">Obi Rope</a>. 
-		You can't drop the lasso, but a bespoke physics constraint allows it to 
-		slip through your hands when not gripping. 
-		This prevents you from dropping or losing it, so you can wrangle, swing, 
-		and toss safely with natural-feeling hand motions.
+		You can't drop the lasso, but a custom physics constraint allows it to 
+		slip through your hands when you're not gripping it. 
+		This prevents you from dropping or losing the rope
+		and lets you manipulate it with natural hand gestures.
 	</p>
 	
 	<a href="lasso/playing.jpg" target="_blank"><img src="lasso/playing.jpg"></a>
 	
 	<p>
-		You need feedback as you swing your lasso,
-		but we can't simulate the force of a real one.
-		Instead the lasso's speed modulates the volume and pitch of a spatial 'swoosh' 
+		The lasso's speed modulates the volume and pitch of a spatial 'swoosh' 
 		sound. This provides natural awareness of the rope's speed and position, 
 		and its fun to hear it whiz around your head.
 	</p>
@@ -72,17 +70,17 @@
 		<a href="https://polyhaven.com/" target="_blank">PolyHaven</a>,
 		one of which I projected onto a heavily modified mesh initially created using 
 		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth</a>.
-		This gives the environment just enough depth to look convincing 
+		<!-- This gives the environment just enough depth to look convincing 
 		as long as you don't stray too far from the center. 
 		Because of how basic the environment is, the game can render at a 
-		crisp 3000x3000+ resolution, much higher than default. 
+		crisp 3000x3000+ resolution, much higher than default.  -->
 	</p>
 	
 	<p>
 		You can download the game for Oculus Quest from  
 		<a href="https://github.com/Clownboys/lasso">Github</a> or 
 		<a href="https://globalgamejam.org/games/2024/learn-ropes-1">Global Game Jam</a>.
-		We have loose plans to develop the game further and support other platforms :)
+		We have loose plans to develop the game further and support other platforms.
 	</p>
 	
 	<p>
