--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -39,9 +39,8 @@
 	
 	<p>
 		This is a virtual lab project led by Purdue University Prof. Stylianos Chatzidakis.
-		It increases accessibility to curriculum-necessary radiation spectrum analysis equipment
-		with a web-simulated lab space.
-		Built on Unity, I'm responsible for nearly all visuals and scripting.
+		The lab is built on Unity, and I'm responsible for nearly all visuals and programming.
+		It runs in a browser and increases accessibility to curriculum-necessary lab equipment.
 	</p>
 	
 	<div class="webvid verticalvid">
@@ -49,12 +48,12 @@
 	</div>
 	
 	<p>
-		A lot of care went into the visuals and user interaction to teach
-		students how to properly use the equipment. 
 		Users don't interface with 2D abstractions but instead 
-		press buttons, flip switches, and turn knobs on accurate 3D representations. 
-		I decorated these models with the same labels, stickers, stains, 
-		and scratches that grace their real counterparts.
+		press buttons, flip switches, and turn knobs on accurate 3D representations.
+		After using this virtual lab, a student should be able to easily
+		use the real thing.
+		<!-- I decorated these models with the same labels, stickers, stains, 
+		and scratches that grace their real counterparts. -->
 	</p>
 	<p>
 		The program runs in a browser and is optimized for low-spec devices
@@ -67,42 +66,43 @@
 	
 	<p>
 		I collaborated with Prof. Chatzidakis and his team to
-		simulate the equipment via Unity scripting.
+		program fully-functional simulations of the equipment.
 		The program is a flexible 'sandbox' that will deal with any 
 		arrangements the user may configure.
 		Inputs & outputs are fully simulated and everything interacts realistically.
-		Tools are modular scripts, 
-		making it easy to expand the lab with new equipment in the future.
 	</p>
-	<p>
+	<!-- <p>
 		A lot of thought went into this program's architecture, 
 		leading to modular systems that communicate through delegates and Unity events.
 		I've already reused many of them for other virtual lab projects
 		because of how modular these systems are.
 		Only a fraction of these scripts are truly specific to this virtual lab 
 		and couldn't be useful in other projects.
-	</p>
+	</p> -->
 	
 	<a href="virtuallab/Screenshot_2.png" target="_blank"><img src="virtuallab/Screenshot_2.png"></a>
 	
-	<p>
+	<!-- <p>
 		I am continuing to collaborate with Prof. Chatzidakis and his team 
 		to expand the lab with more equipment and to cover more of his curriculum.
 		I am also working on detailed documentation so that
 		other developers may start building off of it.
-	</p>
-	
-	<a href="virtuallab/Screenshot_3.png" target="_blank"><img src="virtuallab/Screenshot_3.png"></a>
+	</p> -->
 	
 	<p>
-		While a lot of the lab is bespoke, including its plug & port system, object interaction,
-		graphing tools and UI, I still used several third party assets. 
+		While I was responsible for most programming and artwork, 
+		I still used some third party assets.
 		The cable dynamics come from 
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">Obi Rope</a>,
 		and the radioactive source container model comes from 
 		<a href="https://polyhaven.com/a/Barrel_01" target="_blank">PolyHaven</a>.
-		The lab is built in Unity and most of the visuals were done in Blender, Substance Painter,
-		Marmoset Toolbag, and Affinity Designer.
+	</p>
+	<p>
+		The lab is built in Unity and I created most of the visuals using in Blender,
+		Substance Painter, Marmoset Toolbag, and Affinity Designer.
+	</p>
+	
+	<a href="virtuallab/Screenshot_3.png" target="_blank"><img src="virtuallab/Screenshot_3.png"></a>
 	
 	<p>
 		Completed late 2023
