--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -12,6 +12,8 @@
 		// marmoset.largeUI = true;
 		// marmoset.transparentBackground = true;
 		
+		// marmoset.noUserInterface = true;
+		
 		var viewer = marmoset.embed('tbexport.mview', { fullFrame: true });
 		
 		
@@ -32,11 +34,11 @@
 	
 	
 	<div style="position:absolute; width: 100%; height: 50px; bottom:0; 
-	text-align: center; line-height:50px; font-size:25px; font-family:title;
+	text-align: center; line-height:50px; font-size:20px; font-family:title;
 	margin-left: auto; margin-right: auto; overflow:hidden;">
 		<div style="background-color:#000000DD; padding: 20px; display:inline;">
 			<a onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
-			<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wireframe</a>
+			<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wire</a>
 		</div>
 	</div>
 </body>
