better mobile menu button

--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -12,9 +12,7 @@
 
 <div id="backgroundGlyph"></div>
 
-<div id="navmobile">
-	<a href="/mobilenav.html"> Menu </a>
-</div>
+<a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
 <article style="position:relative;">
