better 3d viewer controls

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
 <article>
-
-	<h1 style="margin-bottom: 0;">Julian Triveri</h1>
 	
-    <div class="circlesPacked" style="padding-top: 75px;">
+    <div class="circlesPacked">
 
         <a class="packedCircle" href="/portfolio/virutallab.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
@@ -41,7 +39,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				projected motion grpahics
+				projected motion graphics
 			</div>
         </a>
 		
@@ -57,7 +55,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				VR lasso<br>gamejam game
+				VR lasso game-jam
 			</div>
         </a>
 
@@ -73,7 +71,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				texture & light baking tests
+				light baking tests
 			</div>
         </a>
         
