--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -44,7 +44,11 @@
 	<div class="webvid verticalvid">
 		<iframe src="virtuallab/tbexport.html"></iframe>
 	</div>
-	<a style="font-family:title;" href="virtuallab/tbexport.html" target="_blank">Fullscreen >>></a>
+	<p>
+		<a style="font-family:title;" href="virtuallab/tbexport.html" target="_blank">
+			Fullscreen >>>
+		</a>
+	</p>
 	
 	<p>
 		Users don't interface with 2D abstractions but instead 
