--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -12,10 +12,9 @@
 		// marmoset.largeUI = true;
 		// marmoset.transparentBackground = true;
 		
-		// marmoset.noUserInterface = true;
+		marmoset.noUserInterface = true;
 		
 		var viewer = marmoset.embed('tbexport.mview', { fullFrame: true });
-		
 		
 		/* viewer.ui.showActiveView = (function() {
 			var og = viewer.ui.showActiveView;
@@ -33,13 +32,10 @@
     </script>
 	
 	
-	<div style="position:absolute; width: 100%; height: 50px; bottom:0; 
-	text-align: center; line-height:50px; font-size:20px; font-family:title;
-	margin-left: auto; margin-right: auto; overflow:hidden;">
-		<div style="background-color:#000000DD; padding: 20px; display:inline;">
-			<a onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
-			<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wire</a>
-		</div>
+	
+	<div class="viewerOptions">
+		<a onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
+		<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wire</a>
 	</div>
 </body>
 </html>
