--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <article>
 
-    <h1>hello world</h1>
+    <h1>about</h1>
     <p>
 		My name is Julian Triveri. I'm a undergrad at Purdue University 
 		and an employee at a 
