--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
 <article>
+
+	<h1>julian triveri</h1>
 	
     <div class="circlesPacked">
 
