--- a/more.html
+++ b/more.html
@@ -17,7 +17,7 @@
 
 <article>
 
-	<h1 style="margin-bottom: 0;">misc.</h1>
+	<h1 style="margin-bottom: 0;">misc</h1>
 	
 	<ul>
 		<li><a href="/portfolio/cgt321.html">
