--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -34,8 +34,8 @@
 	
 	
 	<div class="viewerOptions">
-		<a onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
-		<a onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wire</a>
+		<a href="javascript:void(0);" onclick="viewer.stripData.selectedStrip = -2; viewer.wake();">Color</a> | 
+		<a href="javascript:void(0);" onclick="viewer.stripData.selectedStrip = 4; viewer.wake();">Wire</a>
 	</div>
 </body>
 </html>
