--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -31,6 +31,12 @@
 			src="https://player.vimeo.com/video/822188345?h=66eadcb174&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
+	<p>
+		This is from a larger project about a snowman 
+		from the north pole who visits the desert and an explorer. 
+		I'm responsible for everything except for the scorpion.
+		This project is my excuse to start using Houdini for VFX.
+	</p>
 
 	<br>
 	
@@ -39,6 +45,11 @@
 				allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 				allowfullscreen></iframe>
 	</div>
+	<p>
+		Originally a final for a lighting course, 
+		I'd like to flesh this out in the future.
+		I'm responsible for everything here.
+	</p>
 
 	<script src="https://player.vimeo.com/api/player.js"></script>
 
