better misc page

--- a/more.html
+++ b/more.html
@@ -19,17 +19,18 @@
 
 	<h1 style="margin-bottom: 0;">misc</h1>
 	
-	<ul>
+	<ul style="font-family:title;">
 		<li><a href="/portfolio/cgt321.html">
 			Illustrations for a class >>>
 		</a>
-		<br>
-		<li><a href="blender.html">
-			Blender resources for a student workshop >>>
-		</a>
-		<br>
 		<li><a href="archive/index.html">
 			Old website & projects from 2020 and before >>>
+		</a>
+		<li><a href="https://github.com/cellomonster" target="_blank">
+			Old Github >>>
+		</a>
+		<li><a href="https://www.youtube.com/@trev3d/videos" target="_blank">
+			Youtube >>>
 		</a>
 	</ul>
 
