--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -32,8 +32,8 @@
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<p>
-		This is from a larger project about a snowman 
-		from the north pole who visits the desert and an explorer. 
+		This is a test for a simple animation about
+		an adventurous snowman who visits the desert. 
 		I'm responsible for everything except for the scorpion.
 		This project is my excuse to start using Houdini for VFX.
 	</p>
