wip nick critiques

--- a/about.html
+++ b/about.html
@@ -20,9 +20,8 @@
     <h1>about</h1>
     <p>
 		My name is Julian Triveri. I'm a undergrad at Purdue University 
-		and an employee at a 
-		<a href="https://www.rcac.purdue.edu/envision">university run visualization lab</a>.
-		Several projects shown on this site come from my work there.
+		and a full-time associate research software engineer at the 
+		<a href="https://www.rcac.purdue.edu/envision">Purdue Envision Center</a>.
 	</p>
 	
 	<p>
@@ -38,6 +37,40 @@
 		Working within such constraints requires a more human touch
 		where problem solving and clever tricks make all the difference. 
     </p>
+	
+	<br>
+	<p>
+		I have extensive experience with:
+	</p>
+		<ul>
+			<li> Unity
+			<ul> 
+				<li> C# scripting
+				<li> Meta Quest / OpenXR
+				<li> XR Interaction Toolkit
+				<li> Obi Rope
+			</ul>
+			<li> Blender
+			<ul>
+				<li> Cycles
+				<li> Geometry Nodes
+				<li> Shader Nodes
+				<li> Poly modeling
+			</ul>
+			<li> Substance Painter
+			<li> Marmoset Toolbag
+		</ul>
+	<p>
+		And moderate experience with:
+	</p>
+		<ul>
+			<li> HLSL / Unity Shaderlab
+			<li> C++
+			<li> HTML / CSS
+			<li> Javascript
+			<li> Blender rigging
+			<li> Character modeling & animation
+		</ul>
 	
 	<!-- <p> 
 		If I can be candid and a little unprofessional for a moment, 
