--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <article>
 
-	<h1>julian triveri</h1>
+	<h1 style = "margin-bottom:20px;">julian triveri</h1>
+	<p>3D generalist, tech artist, & software engineer</p>
 	
     <div class="circlesPacked">
 
@@ -28,14 +29,6 @@
 				nuclear engineering virtual education
 			</div>
         </a>
-		
-		<a class="packedCircle" href="/portfolio/mocap.html">
-			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
-			
-			<div class="thumbnail thumbtext">
-				VR + motion capture prototype
-			</div>
-		</a>
 		
 		<a class="packedCircle" href="/portfolio/courthouse.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
@@ -52,6 +45,14 @@
 				AR nuclear pharmacy education
 			</div>
         </a>
+		
+		<a class="packedCircle" href="/portfolio/mocap.html">
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				VR + motion capture prototype
+			</div>
+		</a>
 		
 		<a class="packedCircle" href="/portfolio/lasso.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
@@ -73,7 +74,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				light baking tests
+				light baking studies
 			</div>
         </a>
         
