--- a/portfolio/dioramas.html
+++ b/portfolio/dioramas.html
@@ -17,9 +17,8 @@
 
 <article>
 
-	<h1>miscellaneous models</h1>
+	<h1>light baking studies</h1>
 	<h3>
-		Light baking tests for high-fidelity graphics on low-spec hardware.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
