--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <article>
 
 	<h1 style = "margin-bottom:20px;">julian triveri</h1>
-	<p>3D generalist, tech artist, & software engineer</p>
+	<p>3D generalist, tech artist, & VR software developer</p>
 	
     <div class="circlesPacked">
 
