edited mocap and lasso pages

--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -67,7 +67,10 @@
 		The environment is made of two CC0 360 images from 
 		<a href="https://polyhaven.com/" target="_blank">PolyHaven</a>,
 		one of which I projected onto a heavily modified mesh initially created using 
-		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth</a>.
+		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth</a>
+		to create the terrain.
+		
+		
 		<!-- This gives the environment just enough depth to look convincing 
 		as long as you don't stray too far from the center. 
 		Because of how basic the environment is, the game can render at a 
