--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -36,27 +36,52 @@
 	</div>
 	<p>
 		This is a prototype VR multiplayer sword dueling game.
-		Two players are intended to face off with physical foam swords on a motion capture stage.
+		Two players face off with physical foam swords on a motion capture stage.
 		The capture data is streamed to the VR headsets to drive visuals that align 
 		with the real world.
+	</p>
+	
+	<p>
+		I am using an OptiTrack mocap system, and OptiTrack's
+		official plugin for Unity does not support 1:1 skeletal
+		tracking nor Android / Meta Quest. 
+		I instead modified an old third-party
+		plugin compatible with Android to support 1:1 skeletal tracking
+		and the latest version of OptiTrack's software.
+	</p>
+	
+	<a href="mocap/snapshot1.png" target="_blank"><img src="mocap/snapshot1.png"></a>
+	
+	<p>
+		While OptiTrack supports VR headset tracking, 
+		the Meta Quest already tracks itself and with less latency.
+		I wrote a calibration solution to align a headset's 
+		spatial orientation to the mocap system.
+	</p>
+		Over-exposed light trails are a signature of lightsabers.
+		These are achieved with a simple custom mesh trail generator.
+		I'm also writing a custom fast bloom solution that can achieve 
+		over-exposed colored emissive materials like lightsabers without
+		high dynamic range rendering expensive for
+		standalone VR.
 	</p>
 	
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
 	
 	<p>
-		I am using an OptiTrack system streaming data to a modified version of
-		the official OptiTrack Unity plugin for 1:1 skeletal tracking.
-		There is a lot of work to be done to improve space calibration, 
-		body tracking, latency, and the foam swords themselves
-		(too heavy!).
+		There is still a lot of work to be done to improve space calibration, 
+		motion tracking latency, and the foam swords themselves
+		(they're made of PVC pipe and pool noodles. Too heavy!)
 	</p>
 	
 	<p>
 		My friend <a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
-		helped a ton with testing and foam sword creation. I used several CC0 assets from 
+		helped a ton with testing the game and also helped make a late-night run 
+		to Dick's sporting goods to buy overpriced pool noodles for the swords. 
+		I used several CC0 assets from 
 		<a href="https://polyhaven.com" target="_blank">PolyHaven.com</a>
 		and <a href="https://ambientcg.com" target="_blank">AmbientCG.com</a>
-		to create a generic lava planet. Thank you!
+		to create the lava planet environment. Thank you!
 	</p>
 
 </article>
