--- a/442.html
+++ b/442.html
@@ -20,8 +20,30 @@
 	<h1 style = "margin-bottom:20px;">julian triveri</h1>
 	<p>3D generalist, tech artist, & VR software developer</p>
 	
+	<h3>Done this semester outside of work:</h3>
+	
     <div class="circlesPacked">
-
+	
+		<a class="packedCircle" href="/portfolio/mocap.html">
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				VR + motion capture prototype
+			</div>
+		</a>
+		
+		<a class="packedCircle" href="/portfolio/lasso.html">
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				VR lasso game-jam
+			</div>
+        </a>
+	</div>
+	
+	<h3>Job / previous projects:</h3>
+	
+	<div class="circlesPacked">
         <a class="packedCircle" href="/portfolio/virutallab.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
 			
@@ -43,22 +65,6 @@
 			
 			<div class="thumbnail thumbtext">
 				AR nuclear pharmacy education
-			</div>
-        </a>
-		
-		<a class="packedCircle" href="/portfolio/mocap.html">
-			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
-			
-			<div class="thumbnail thumbtext">
-				VR + motion capture prototype
-			</div>
-		</a>
-		
-		<a class="packedCircle" href="/portfolio/lasso.html">
-			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
-			
-			<div class="thumbnail thumbtext">
-				VR lasso game-jam
 			</div>
         </a>
 
