--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -45,7 +45,7 @@
 		The goal is to wrangle in antagonistic clowns with your trusty lasso.
 	</p>
 	<p>
-		I created the lasso with 
+		I was responsible for the lasso mechanic using  
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">Obi Rope</a>. 
 		You can't drop the lasso, but a custom physics constraint allows it to 
 		slip through your hands when you're not gripping it. 
