--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -58,12 +58,9 @@
 		I wrote a calibration solution to align a headset's 
 		spatial orientation to the mocap system.
 	</p>
-		Over-exposed light trails are a signature of lightsabers.
-		These are achieved with a simple custom mesh trail generator.
-		I'm also writing a custom fast bloom solution that can achieve 
-		over-exposed colored emissive materials like lightsabers without
-		high dynamic range rendering expensive for
-		standalone VR.
+	<p>
+		Over-exposed light trails are a lightsaber signature.
+		I achieve these with a simple custom mesh trail generator.
 	</p>
 	
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
