--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -74,7 +74,7 @@
 	<p>
 		My friend <a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
 		helped a ton with testing the game and also helped make a late-night run 
-		to Dick's sporting goods to buy overpriced pool noodles for the swords. 
+		to buy pool noodles for the swords. 
 		I used several CC0 assets from 
 		<a href="https://polyhaven.com" target="_blank">PolyHaven.com</a>
 		and <a href="https://ambientcg.com" target="_blank">AmbientCG.com</a>
