--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -71,6 +71,13 @@
 		(they're made of PVC pipe and pool noodles. Too heavy!)
 	</p>
 	
+	<a href="mocap/saber1.png" target="_blank"><img src="mocap/saber1.png"></a>
+		
+	<p style="font-size: 0.7em; margin-top:0px;" >
+		Simple placeholder saber model
+	</p>
+	<a href="mocap/saber2.png" target="_blank"><img src="mocap/saber2.png"></a>
+	
 	<p>
 		My friend <a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
 		helped a ton with testing the game and also helped make a late-night run 
